--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,10 @@
                             <a href="https://purnia.github.io/TriviaGame/"> <img src="assets/images/Trivia-Questions-Only-Geniuses-Will-Get-Right-FT-1.jpg" alt="Avatar"
                                 style="width:100%"></a>
                             <div class="card">
-                                <h4><b>Trivia Game</b></h4>
+                                <h4><b>Trivia Game</b>
+                                    <br>
+                                <a href="https://github.com/Purnia/project1">Click to view code</a>
+                                </h4>
 
                             </div>
                         </div>
@@ -33,7 +36,10 @@
                         <div class="card">
                             <a href= "http://charitable-news.com/"><img src="assets/images/man-hands-reading-boy (2).jpg" alt="Avatar" style="width:100%">
                             <div class="card"></a>
-                                <h4><b>News App</b></h4>
+                                <h4><b>Charitable News</b>
+                                    <br>
+                                    <a href="">Click to view code</a>
+                                </h4>
 
                             </div>
                         </div>
@@ -45,7 +51,9 @@
                             <div class="card">
                                 <a href="https://purnia.github.io/TrainSchedule/"><img src="assets/images/pexels-photo-374684 (1).jpeg" alt="Avatar" style="width:100%">
                                 <div class="card"></a>
-                                    <h4><b>Train Scheduler</b></h4>
+                                    <h4><b>Train Scheduler</b>
+                                        <br>
+                                        <a href="https://github.com/Purnia/TrainSchedule">Click to view code</a></h4>
 
                                 </div>
                             </div>
