--- a/contact.html
+++ b/contact.html
@@ -20,13 +20,16 @@
             <div class="aboutMe">
                 <div class="row">
                     <div class="col-sm">
-                        <img src="assets/images/linkedin.png">
+                       Email address <br>
+                       Purnia92@gmail.com 
                     </div>
                     <div class="col-sm">
-                        <img src="assets/images/github.png">
+                        Phone Number <br>
+                        (312)765-3806
                     </div>
                     <div class="col-sm">
-                        <img src="assets/images/email.png">
+                        PDF link for <br>
+                        <a href="https://docs.google.com/document/d/1cA2MjsHDcPMoFSfKaDok4lPk8NbPVfeGWS6KzjAUDgk/edit?usp=sharing" id="resumeLink"> Resume </a>
                     </div>
 
                 </div>
