--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
                 </div>
                 <div class="aboutMe">
                     <div class="row">
-                        <div class="col-sm">
+                        <div class="col-sm" id="aboutp">
                                 <p> I am a political research analyst, currently residing in the city of chicago and pursuing a career in web-development. My current skill set include HTML, CSS, Bootstrap, Java Script, Jquery and Node. I love spending my times outdoors hiking and doing photography. During the brutal Chicago winters i like to stay indoors and spend my time paiting. I have a keen eye for aesthetics and all things minimalist.</p>
                         </div>
                         <div class="col-sm"></div>
