--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                  
                   <footer>
                         <div class="row">
-                            <div class="col-sm">
+                            <div class="col-sm" id="footerlinks">
                                     <a href="https://www.linkedin.com/in/purnia-h-siddiqui-7965aa162"><i class="fab fa-linkedin fa-lg"></i></a> 
                             
                                     <a href="https://github.com/Purnia"><i class="fab fa-github-square fa-lg"></i></a>
